2023-11-09  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.0-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha01: Crown Princess';git push
	git tag -a 5.2.0-alpha01 -m 'Functionally identical to 5.1.9';git push --tags

	* Document ncks --chk_xtn

2023-11-07  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.9 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.9: Likanne o ka Moana';git push
	git tag -a 5.1.9 -m 'all: flg_ilv fix, WIN32 sls_chr; bm: rsync; ncap2 parse NC_MIN_INT64; ncks: chk_xtn; ncremap: mpt_mss, trbilin, trintbilin, ncoaave, ...;';git push --tags

	* NCO 5.1.9-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.9-beta01: Likanne o ka Moana';git push
	git tag -a 5.1.9-beta01 -m 'all: flg_ilv fix, WIN32 sls_chr; bm: rsync; ncap2 parse NC_MIN_INT64; ncks: chk_xtn; ncremap: mpt_mss, trbilin, trintbilin, ncoaave, ...;';git push --tags

2023-11-03  Charlie Zender  <zender@uci.edu>

	* Update ncclimo regression test to use v2 not v1 data

	* Use rsync rather than scp in NCO_rgr.pm (fixes many regression tests)

	* Update config.guess, config.sub from GNU Savannah

	* Determine sls_chr from _MSC_VER and (new) WINOS token instead of (old) WIN32 token

	* Deprecate WIN32 token, use WINOS instead (in pvmgetarch, Makefile, Makefile.old, configure.ac)

	* Add MinGW to GNU_TRP and PVM_ARCH types that define WINOS token

2023-11-02  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.9-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.9-alpha03: Caring Bridge';git push
	git tag -a 5.1.9-alpha03 -m 'all: fix uninitialized flg_ilv to fix ncra, ncrcat bugs; ncap2: refactor exit(), parse NC_MIN_INT64; ncks: chk_xtn';git push --tags

	* Add --chk_xtn to check DIWG filename extension recommendation in diwg_chk

	* Determine sls_chr from _MSC_VER not WIN32 (archaic)
	Fixes bug where NCO expected Windows filenames like C:/foo.nc instead of C:\foo.nc

2023-11-01  Charlie Zender  <zender@uci.edu>
